# hadith-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.MD  Cargo.toml  Dockerfile  Makefile  build.rs  docker-compose.yml  plan.md
docs/: api.md  import-hadith-json.md  transliteration.md
migrations/: 0001_create_hadith_schema.sql
scripts/: inspect_duplicate_references.py
src/: config.rs  domain.rs  error.rs  lib.rs  main.rs  state.rs
src/import/: hadith_json.rs  mod.rs
src/repositories/: collections.rs  hadiths.rs  mod.rs
src/routes/: collections.rs  hadiths.rs  health.rs  mod.rs  retrieval.rs
src/services/: collections.rs  hadiths.rs  mod.rs  retrieval.rs
src/transliteration/: simple.rs
