[package]
name = "hadith-assistant"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.0"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
